fix the logo size on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -311,6 +311,7 @@ ul {
     min-width: 0;
   }
   .logo img {
+    width: 10%;
     max-height: 40vh;
     min-width: 0;
  }
